# OneLakeTools

./: .coderabbit.yaml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/instructions/: code-review.instructions.md
.github/workflows/: ci.yml  integration.yml  publish.yml
TUI/: README.md  pyproject.toml
TUI/src/onelake_client/: __init__.py  _http.py  auth.py  environment.py  exceptions.py
TUI/src/onelake_client/dfs/: __init__.py  client.py
TUI/src/onelake_client/fabric/: __init__.py  client.py
TUI/src/onelake_client/models/: __init__.py  filesystem.py  item.py  table.py  workspace.py
TUI/src/onelake_client/tables/: __init__.py  delta.py  iceberg.py
TUI/src/onelake_tui/: __init__.py  app.py  app.tcss  banner.py  copy_menu.py  detail.py  help_screen.py  item_list.py  nodes.py  sprite.py  status_bar.py  tree.py  workspace_picker.py
TUI/tests/: conftest.py  generate_fixtures.py  test_app_interactions.py  test_auth.py  test_copy_menu.py  test_delta_fixtures.py  test_delta_reader.py  test_detail_features.py  test_detail_preview.py  test_detail_snapshots.py  test_dfs_client.py  test_edge_cases.py  test_error_handling.py  test_fabric_client.py  test_http.py  test_iceberg_reader.py  test_models.py  test_parquet_fixtures.py  test_path_roundtrips.py  test_robustness.py  test_sprite.py  test_tree_edge_cases.py  test_tui_smoke.py  test_widget_loading.py
TUI/tests/__snapshots__/: test_detail_snapshots.ambr
TUI/tests/fixtures/: README.md
TUI/tests/fixtures/delta/basic_table/: part-00000-13d5b677-9bcc-49db-b8eb-d1061abd6dec-c000.snappy.parquet
TUI/tests/fixtures/delta/cdf_enabled/: part-00000-78bf035e-b8d3-44db-8635-37287ead77a4-c000.snappy.parquet
TUI/tests/fixtures/delta/partitioned_table/region=eu-west/year=2024/: part-00000-a5d8437d-e266-4c1f-a11f-c333fd2f9b03-c000.snappy.parquet
TUI/tests/fixtures/delta/partitioned_table/region=eu-west/year=2025/: part-00000-97a25b66-d39e-4308-afa9-eb468b888e7a-c000.snappy.parquet
TUI/tests/fixtures/delta/partitioned_table/region=us-east/year=2024/: part-00000-88d09544-bb97-4b38-91b7-8de8527f3cfb-c000.snappy.parquet
TUI/tests/fixtures/delta/partitioned_table/region=us-east/year=2025/: part-00000-506c49e8-7783-4237-9a87-982169903dd3-c000.snappy.parquet
TUI/tests/fixtures/delta/unicode_paths/: part-00000-2a88f896-bc85-4144-97ee-fe7cbe922574-c000.snappy.parquet
TUI/tests/fixtures/parquet/: all_types.parquet  dictionary_encoded.parquet  nested_structs.parquet
TUI/tests/integration/: conftest.py  test_live.py
docs/: README.md
docs/branding/: onelake_logo.ans  onelake_sprite.txt
docs/decisions/: 001-guid-based-dfs-paths.md  002-static-environment-config.md  003-shared-token-scopes.md  (+2 more)
(+1 files in other folders)
