[project]
name = "onelake-tools"
version = "0.1.0"
description = "TUI and client library for Microsoft Fabric OneLake"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "azure-identity>=1.15",
    "deltalake>=0.22",
    "pyiceberg>=0.8",
    "pyarrow>=14.0",
    "textual>=1.0",
]

[project.scripts]
onelake-tui = "onelake_tui.app:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onelake_client", "src/onelake_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
