[project]
name = "onelake-tools"
version = "0.2.0b1"
description = "Unofficial TUI and client library for Microsoft Fabric OneLake"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{name = "Luke Moloney"}]
keywords = ["onelake", "fabric", "microsoft", "tui", "lakehouse", "delta-lake", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "azure-identity>=1.15",
    "deltalake>=0.22",
    "pyiceberg>=0.8",
    "pyarrow>=14.0",
    "fastavro>=1.9",
    "textual>=1.0",
]

[project.scripts]
onelake-tui = "onelake_tui.app:run"

[project.urls]
Homepage = "https://github.com/lmoloney/OneLakeTools"
Repository = "https://github.com/lmoloney/OneLakeTools"
Issues = "https://github.com/lmoloney/OneLakeTools/issues"
Changelog = "https://github.com/lmoloney/OneLakeTools/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.34",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onelake_client", "src/onelake_tui"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/onelake_tui/sprite.py" = ["E501"]  # embedded ANSI art data
